<resources>
    <string name="app_name">Cinnotify</string>
    <string name="notify_button_description">Press to send a test notification</string>
    <string name="action_settings">Settings</string>
    <string name="create_notification">Create Notification</string>
    <string name="open_notification_access">Open Notification Access</string>

    <string name="notification_access_dialog_title">Need notification access</string>
    <string name="notification_access_dialog_content">This app needs access to your notifications. Click OK and then check the box.</string>
    <string name="ok">OK</string>

    <string name="pref_ip">Server IP</string>
    <string name="pref_socket">Server Port</string>
    <string name="pref_networking_settings">Networking</string>
    <string name="pref_app_settings">App</string>
    <string name="pref_enabled">Listener Enabled</string>
    <string name="pref_enabled_summary">If off, the app will not try to send notifications to the server</string>
    <string name="allowed_apps_title">Allowed Apps</string>
    <string name="allowed_apps_summary">Select the apps that are allowed to send notifications</string>

    <string name="service_discovery_title">Discover Cinnotify servers</string>
    <string name="service_discovery_summary">Automatically look for Cinnotify servers on this network</string>

    <string name="pref_encryption_title">Encryption</string>
    <string name="pref_encryption_enable">Enable Encryption</string>
    <string name="pref_encryption_summary">This will send your messages securely to your PC, preventing snoopers from reading them. This is strongly recommended.</string>
    <string name="pref_encryption_password">Password</string>



    <string name="cinnotify_no_send_explanation">Cinnotify can\'t send a test notification. Make sure that the Listener is enabled in Settings, and that Cinnotify is an allowed app in the \'Allowed Apps\' setting</string>
</resources>
