<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_app_settings"
        android:key="pref_app_settings">
    <SwitchPreference
        android:key="pref_enabled"
        android:title="@string/pref_enabled"
        android:summary="@string/pref_enabled_summary"
        android:defaultValue="true" />
    <PreferenceScreen
        android:key="allowed_apps_activity"
        android:title="@string/allowed_apps_title"
        android:summary="@string/allowed_apps_summary" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_networking_settings"
        android:key="pref_networking_settings">
        <PreferenceScreen
            android:key="service_discovery_activity"
            android:title="@string/service_discovery_title"
            android:summary="@string/service_discovery_summary" />
        <EditTextPreference
            android:key="pref_ip"
            android:title="@string/pref_ip"
            android:inputType="phone"
            android:digits="0123456789."
            android:defaultValue="0.0.0.0" />
        <EditTextPreference
            android:key="pref_port"
            android:title="@string/pref_socket"
            android:inputType="phone"
            android:digits="0123456789"
            android:defaultValue="6525" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_encryption_title"
        android:key="pref_encryption_settings">
        <SwitchPreference
            android:key="pref_encryption_enabled"
            android:title="@string/pref_encryption_enable"
            android:summary="@string/pref_encryption_summary"
            android:defaultValue="false" />
        <EditTextPreference
            android:key="pref_encryption_password"
            android:title="@string/pref_encryption_password"
            android:inputType="textPassword"/>
    </PreferenceCategory>
</PreferenceScreen>
